--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"files.associations": {
 		"get_next_line_bonus.h": "c",
 		"scene.h": "c",
-		"object.h": "c"
+		"object.h": "c",
+		"minirt.h": "c"
 	}
 }
