--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
 			"request": "launch",
 			"name": "Debug",
 			"program": "${workspaceFolder}/miniRT",
-			"args": ["./scenes/test.rt"],
+			"args": ["./scenes/test2.rt"],
 			"cwd": "${workspaceFolder}",
 			"breakpointMode": "file"
 		}
